Hide layout issue

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: gray;
+  background-color: lightgray;
 }
 
 .container {
